syntax = "proto3";

package metalstack.api.v2;

import "metalstack/api/v2/common.proto";

service WrongProjectService {
  rpc Add(WrongProjectServiceAddRequest) returns (WrongProjectServiceAddResponse) {
    option (tenant_roles) = TENANT_ROLE_OWNER;
  }
  rpc Get(WrongProjectServiceGetRequest) returns (WrongProjectServiceGetResponse) {
    option (project_roles) = PROJECT_ROLE_OWNER;
  }
  rpc List(WrongProjectServiceListRequest) returns (WrongProjectServiceListResponse) {
  }
  rpc Update(WrongProjectServiceUpdateRequest) returns (WrongProjectServiceUpdateResponse) {
    option (admin_roles) = ADMIN_ROLE_VIEWER;
    option (project_roles) = PROJECT_ROLE_OWNER;
  }
  rpc Delete(WrongProjectServiceDeleteRequest) returns (WrongProjectServiceDeleteResponse) {
    option (admin_roles) = ADMIN_ROLE_VIEWER;
    option (metalstack.api.v2.visibility) = VISIBILITY_PUBLIC;
  }
  rpc Charge(WrongProjectServiceChargeRequest) returns (WrongProjectServiceChargeResponse) {
    option (chargeable) = CHARGEABLE_TRUE;
  }
  rpc AlsoUpdate(WrongProjectServiceAlsoUpdateRequest) returns (WrongProjectServiceAlsoUpdateResponse) {
    option (project_roles) = PROJECT_ROLE_OWNER;
  }
}

message WrongProjectServiceAddRequest {
  string uuid = 1;
}

message WrongProjectServiceAddResponse {
  string login = 1;
}
message WrongProjectServiceGetRequest {
    string uuid = 1;
}

message WrongProjectServiceGetResponse {
    string uuid = 1;
}
message WrongProjectServiceListRequest {
    string uuid = 1;
}

message WrongProjectServiceListResponse {
    string uuid = 1;
}

message WrongProjectServiceUpdateRequest {
    string uuid = 1 [(treat_as_id) = true];
    string project = 2;
}
message WrongProjectServiceUpdateResponse {
    string uuid = 1;
}

message WrongProjectServiceAlsoUpdateRequest {
    string id = 1;
    string uuid = 2 [(treat_as_id) = true];
    string project = 3;
}
message WrongProjectServiceAlsoUpdateResponse {
    string uuid = 1;
}

message WrongProjectServiceDeleteRequest {
    string uuid = 1;
}

message WrongProjectServiceDeleteResponse {
    string uuid = 1;
}
message WrongProjectServiceChargeRequest {
    string uuid = 1;
}

message WrongProjectServiceChargeResponse {
    string uuid = 1;
}